tests/baselines/reference/typeParameterArgumentEquivalence3.errors.txt
tests/cases/compiler/typeParameterArgumentEquivalence3.ts(4,5): error TS2322: Type '(item: 任意) => 真假' is not assignable to type '(item: 任意) => T'.
  Type '真假' is not assignable to type 'T'.
tests/cases/compiler/typeParameterArgumentEquivalence3.ts(5,5): error TS2322: Type '(item: 任意) => T' is not assignable to type '(item: 任意) => 真假'.
  Type 'T' is not assignable to type '真假'.


==== tests/cases/compiler/typeParameterArgumentEquivalence3.ts (2 errors) ====
    function foo<T,U>() {
        var x: (item) => T;
        var y: (item) => boolean;
        x = y;  // Should be an error
        ~
!!! error TS2322: Type '(item: 任意) => 真假' is not assignable to type '(item: 任意) => T'.
!!! error TS2322:   Type '真假' is not assignable to type 'T'.
        y = x;  // Shound be an error
        ~
!!! error TS2322: Type '(item: 任意) => T' is not assignable to type '(item: 任意) => 真假'.
!!! error TS2322:   Type 'T' is not assignable to type '真假'.
    }
    